# GenAMap

./: .gitignore  .gitmodules  CMakeLists.txt  DataBaseCommunicator.hpp  FileIO.hpp  JsonCoder.cpp  License.md  ModelOptions.hpp  Model_Tests.cpp  README.md  brent.cpp  lmm.cpp  lmm.hpp  main.cpp  temp  test.py
Debug/: coverage  coverage.xml  gcovr  makefile  objects.mk
Debug/src/: ProgressState.d  ProgressState.gcno  ^#src#ProgressState.cpp.gcov  coverage.test.d  subdir.mk
Documentation/AlgorithmsGuide/: Algorithms.bib  AlgorithmsGuide.aux  AlgorithmsGuide.tex
Documentation/Development/: Bazel_Quick_Start.md  README.md  Running_GenAMap.md  how_to_run.md
Scheduler/: Scheduler.cpp  Scheduler.h  Scheduler_Tests.cpp
algorithm/: Algorithm.cpp  Algorithm.hpp
depends/: install_bazel.sh  install_mysqlconnector.sh
gdcapi/: decompress  decompress.cpp  gdcapi  gdcapi.cpp
model/: LinearRegression.hpp  Model.hpp  TreeLasso.cpp  TreeLasso.hpp
plinkFormat/: GDCapi.js  plinkTransformer.js
postgresdbpath/: postmaster.pid
scripts/: clean_docker.sh  dev_genamap.sh  genamap.sh  launch_db.sh  launch_docker.sh  launch_docker_with_dbs.sh  launch_genamap_docker.sh  launch_mongo.sh  launch_postgres.sh  link_launch_docker.sh  mongo_launch_docker.sh  start_dbs.sh  start_mongo.sh  stop_dbs.sh  stop_dev_genamap.sh  test_all.sh  test_all_docker.sh
src/: BUILD  FileIO.cpp  JsonCoder.hpp  ProgressState.cpp  WORKSPACE  coverage.test.cpp  lasso.hpp  launch_docker.sh  main.cpp  my_test.cc  test_all.sh  test_all_docker.sh  tests.cpp
src/IO/: BUILD  (+9 more)
testing/: Makefile  sqrt_test.cpp
(+1222 files in other folders)
